--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,4 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "rust-analyzer.server.path": "~/scoop/apps/rust-analyzer/current/rust-analyzer.exe"
 }
