--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,17 +1,73 @@
 {
-    // coc setting
+    // [coc]
     "coc.preferences.extensionUpdateCheck": "daily",
     "coc.preferences.formatOnType": true,
-    // list
+    "coc.preferences.formatOnSaveFiletypes": [
+        "rust",
+        "python",
+        "svg", // coc-svg support svg format
+        "dart", // coc-flutter support dart format */
+        "elixir", // diagnostic-languageserver support elixir format
+        "eelixir", // diagnostic-languageserver support elixir format
+        "html"
+    ],
+    // [list]
     "list.source.files.args": [
         // "--no-ignore",
         "--hidden",
         "--glob=!.git/*",
-        "--pretty",
         "--files"
     ],
-    // python
+    // [diagnostic]
+    "diagnostic.infoSign": "ღ",
+    "diagnostic.hintSign": "ஐ",
+    "diagnostic.warningSign": "»",
+    "diagnostic.errorSign": "×",
+    "diagnostic.virtualText": true,
+    // "diagnostic.virtualTextCurrentLineOnly": false,
+    // [suggest]
+    "suggest.completionItemKindLabels": {
+        "keyword": "\uf1de",
+        "variable": "\ue79b",
+        "value": "\uf89f",
+        "operator": "\u03a8",
+        "function": "\u0192",
+        "reference": "\ufa46",
+        "constant": "\uf8fe",
+        "method": "\uf09a",
+        "struct": "\ufb44",
+        "class": "\uf0e8",
+        "interface": "\uf417",
+        "text": "\ue612",
+        "enum": "\uf435",
+        "enumMember": "\uf02b",
+        "module": "\uf40d",
+        "color": "\ue22b",
+        "property": "\ue624",
+        "field": "\uf9be",
+        "unit": "\uf475",
+        "event": "\ufacd",
+        "file": "\uf723",
+        "folder": "\uf114",
+        "snippet": "\ue60b",
+        "typeParameter": "\uf728",
+        "default": "\uf29c"
+    },
+    // [coc.source]
+    "coc.source.file.priority": 90,
+    "coc.source.file.ignoreHidden": false,
+    "coc.source.around.firstMatch": false,
+    "coc.source.buffer.firstMatch": false,
+    // [pairs]
+    "pairs.enableBackspace": true,
+    // [vimlsp]
+    "vimlsp.indexes.runtimepath": true,
+    "vimlsp.indexes.gap": 10,
+    "vimlsp.indexes.count": 3,
+    "vimlsp.suggest.fromVimruntime": true,
+    // "vimlsp.suggest.fromRuntimepath": true,
+    // [python]
     "python.formatting.provider": "black",
-    // rust
+    // [rust]
     "rust-analyzer.server.path": "~/scoop/apps/rust-analyzer/current/rust-analyzer.exe"
 }
