1. Tune color theme. 2. Add i_<C-V> to paste, using J,K move lines. 3. Enable wakatime. 4. Using spell in some file.

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -25,7 +25,9 @@
     "diagnostic.warningSign": "»",
     "diagnostic.errorSign": "×",
     "diagnostic.virtualText": true,
+    "diagnostic.virtualTextPrefix": "☵ ",
     // "diagnostic.virtualTextCurrentLineOnly": false,
+    // "diagnostic.displayByAle": true,
     // [suggest]
     "suggest.completionItemKindLabels": {
         "keyword": "\uf1de",
