--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,5 @@
 {
+    // example: https://github.com/sumneko/lua-language-server/blob/master/.luarc.json
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema-zh-cn.json",
     "Lua.diagnostics.globals": [
         "packer_plugins",
