--- a/.luarc.json
+++ b/.luarc.json
@@ -2,11 +2,12 @@
     // example: https://github.com/sumneko/lua-language-server/blob/master/.luarc.json
     // "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema-zh-cn.json",
-    "Lua.diagnostics.globals": [
-        "packer_plugins",
-    ],
+    // "Lua.diagnostics.globals": [
+    //     "packer_plugins",
+    // ],
     "Lua.runtime.path": [
         "lua/?.lua",
         "lua/?/init.lua",
     ],
+    // "Lua.workspace.library": []
 }
