--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,6 +1,6 @@
-column_width = 120
-line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
+column_width = 120
 quote_style = "AutoPreferSingle"
-no_call_parentheses = true
+call_parentheses = "None"
+# collapse_simple_statement = "Always"
